tests/fixtures/invalid/block_scope_leak.c
int main() {
    {
        int inner = 7;
    }
    return inner;
}
